  (Stephen Dolan, review by Goswin von Brederlow, Xavier Leroy, Damien
   Doligez, Anil Madhavapeddy, Guillaume Munch-Maccagnoni and Jacques-
   Henri Jourdan)

- #9888, #9890: Fixes a bug in the `riscv` backend where register t0 was not
  saved/restored when performing a GC. This could potentially lead to a
  segfault.
  (Nicolás Ojeda Bär, report by Xavier Leroy, review by Xavier Leroy)

- #9909: Remove caml_code_area_start and caml_code_area_end globals (no longer
  needed as the pagetable heads towards retirement).
  (David Allsopp, review by Xavier Leroy)

- #9949: Clarify documentation of GC message 0x1 and make sure it is
  displayed every time a major cycle is forcibly finished.
  (Damien Doligez, review by Xavier Leroy)

- #9951: Ensure that the mark stack push optimisation handles naked pointers
  (KC Sivaramakrishnan, reported by Enguerrand Decorne, review by Gabriel
   Scherer, and Xavier Leroy)

- #9534, #9947: Introduce a naked pointers checker mode to the runtime
  (configure option --enable-naked-pointers-checker).  Alarms are printed
  when the garbage collector finds out-of-heap pointers that could
  cause a crash in no-naked-pointers mode.
  (Enguerrand Decorne, KC Sivaramakrishnan, Xavier Leroy, Stephen Dolan,
  David Allsopp, Nicolás Ojeda Bär review by Xavier Leroy, Nicolás Ojeda Bär)

* #9674: Memprof: guarantee that an allocation callback is always run
  in the same thread the allocation takes place
  (Jacques-Henri Jourdan, review by Stephen Dolan)

- #10050: update {PUSH,}OFFSETCLOSURE* bytecode instructions to match new
  representation for closures
  (Nathanaël Courant, review by Xavier Leroy)

- #10056: Memprof: ensure young_trigger is within the bounds of the minor
  heap in caml_memprof_renew_minor_sample (regression from #8684)
  (David Allsopp, review by Guillaume Munch-Maccagnoni and
  Jacques-Henri Jourdan)

- #10062: set ARCH_INT64_PRINTF_FORMAT correctly for both modes of mingw-w64
  (David Allsopp, review by Xavier Leroy)
