@@ -132,6 +132,9 @@ OCaml 4.12.0
   segfault.
   (Nicolás Ojeda Bär, report by Xavier Leroy, review by Xavier Leroy)
 
+- #9907: Fix native toplevel on native Windows.
+  (David Allsopp, review by Florian Angeletti)
+
 - #9909: Remove caml_code_area_start and caml_code_area_end globals (no longer
   needed as the pagetable heads towards retirement).
   (David Allsopp, review by Xavier Leroy)
